Support 21034 Add support for agent roles - Update postgres enum role_type to agent_role_type - Replace ImmutableMap with Java Map